; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/extr_libnetdata.c_is_virtual_filesystem.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/extr_libnetdata.c_is_virtual_filesystem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.statfs = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64* }

@.str = private unnamed_addr constant [19 x i8] c"failed to statfs()\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [29 x i8] c"is not a virtual file system\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8**)* @is_virtual_filesystem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_virtual_filesystem(i8* %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca %struct.statfs, align 8
  store i8* %0, i8** %4, align 8
  store i8** %1, i8*** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 @statfs(i8* %7, %struct.statfs* %6)
  %9 = icmp eq i32 %8, -1
  br i1 %9, label %10, label %16

10:                                               ; preds = %2
  %11 = load i8**, i8*** %5, align 8
  %12 = icmp ne i8** %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %10
  %14 = load i8**, i8*** %5, align 8
  store i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i8** %14, align 8
  br label %15

15:                                               ; preds = %13, %10
  store i32 -1, i32* %3, align 4
  br label %38

16:                                               ; preds = %2
  %17 = getelementptr inbounds %struct.statfs, %struct.statfs* %6, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i64*, i64** %18, align 8
  %20 = getelementptr inbounds i64, i64* %19, i64 0
  %21 = load i64, i64* %20, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %30, label %23

23:                                               ; preds = %16
  %24 = getelementptr inbounds %struct.statfs, %struct.statfs* %6, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64*, i64** %25, align 8
  %27 = getelementptr inbounds i64, i64* %26, i64 1
  %28 = load i64, i64* %27, align 8
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %37

30:                                               ; preds = %23, %16
  %31 = load i32, i32* @EINVAL, align 4
  store i32 %31, i32* @errno, align 4
  %32 = load i8**, i8*** %5, align 8
  %33 = icmp ne i8** %32, null
  br i1 %33, label %34, label %36

34:                                               ; preds = %30
  %35 = load i8**, i8*** %5, align 8
  store i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0), i8** %35, align 8
  br label %36

36:                                               ; preds = %34, %30
  store i32 -1, i32* %3, align 4
  br label %38

37:                                               ; preds = %23
  store i32 0, i32* %3, align 4
  br label %38

38:                                               ; preds = %37, %36, %15
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i32 @statfs(i8*, %struct.statfs*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
